Remove bun Server

--- a/progressBarMaker/index.html
+++ b/progressBarMaker/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progress Bar Maker</title>
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 <body>
@@ -49,6 +49,6 @@
         <div id="submit">Go</div>
     </form>
 
-    <script src="/public/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
